<resources>
    <string name="app_name">MuscleApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="retypePassword">Retype password</string>
    <string name="btnsignIn">Sign in</string>
    <string name="name">Name</string>
    <string name="lastName">LastName</string>
    <string name="createNewUser">Create new user</string>
    <string name="btnRegister">Register</string>

</resources>
