<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/amber">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="194dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/TextCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createNewUser"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:layout_marginTop="36dp"/>

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColorHint="@color/black"
            android:layout_marginTop="36dp"/>

        <EditText
            android:id="@+id/txtLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/lastName"
            android:inputType="textPersonName"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/txtPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/retypePassword"
            android:inputType="textPassword"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/btnRegister"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            android:layout_marginTop="36dp"
            android:textColor="@color/amber" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>